--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         </div>
                         <div class="col-md-5">
                            <div class="mane_img">
-                              <figure><img src="images/mane_img.jpg" alt="#"/></figure>
+                              <figure><img src="images/IMG_3224.jpg" alt="#"/></figure>
                            </div>
                         </div>
                      </div>
