--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                            </form>
                         </div>
                         <div class="col-md-5">
-                           <div class="mane_img">
+                           <div class="IMG_3224.jpeg">
                               <figure><img src="images/IMG_3224.jpeg" alt="#"/></figure>
                            </div>
                         </div>
